# VLDB2024-Mclique

./: README.md
KG-construction/: build_graph.py  edge.py  entity.py  sample.py  stats.py
META/: CMakeCache.txt  CMakeLists.txt  DBPedia.txt.txt  Graph.cpp  Graph.h  Makefile  SetTrieNode.h  cmake_install.cmake  global-variable.cpp  global-variable.h  main.cpp  maximal-motif-clique.cpp  maximal-motif-clique.h  mmcs.txt.txt  motif_src  run.sh  small-graph.cpp  (+2 more)
POMA/: CMakeCache.txt  CMakeLists.txt  Graph.h  Makefile  SetTrieNode.cpp  cmake_install.cmake  global-variable.cpp  global-variable.h  main.cpp  maximal-motif-clique.cpp  maximal-motif-clique.h  motif_src  small-graph.cpp  subgraph_match.cpp
POMA/include/: argedit.hpp  argloader.hpp  error.hpp  memory.hpp  vf2_state.hpp  vf2_sub_state.hpp  vf3_impl.hpp  vf3_state.hpp  vf3_sub_state.hpp
POMA/scripts/DBLP/: run_dblp.sh  run_dblp_init.sh  run_dblp_order.sh  run_dblp_pivot.sh  run_dblp_reduce.sh  run_dblp_sca.sh
POMA/scripts/DBPedia/: run_dbpedia.sh  run_dbpedia_init.sh  run_dbpedia_order.sh  run_dbpedia_pivot.sh  run_dbpedia_reduce.sh  run_dbpedia_sca.sh
POMA/scripts/Freebase/: run_freebase.sh  run_freebase_init.sh  run_freebase_order.sh  run_freebase_pivot.sh  run_freebase_reduce.sh  run_freebase_sca.sh
POMA/scripts/Instacart/: run_instacart.sh  run_instacart_init.sh  run_instacart_order.sh  run_instacart_pivot.sh  run_instacart_reduce.sh  run_instacart_sca.sh
POMA/scripts/WordNet/: run_wordnet.sh  run_wordnet_init.sh  run_wordnet_order.sh  run_wordnet_pivot.sh  run_wordnet_reduce.sh  run_wordnet_sca.sh
(+49 files in other folders)
